<resources>
    <string name="app_name">Restaurant Reviewer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="createAccount">Create Account</string>
    <string name="loginGuest">LOG IN AS GUEST</string>
    <string name="loggingInAsGuest">Logging in as guest</string>
    <string name="SignInToAccess">Sign in to access this feature</string>
    <string name="login">LOG IN</string>
    <string name="signInLabel">Sign in with:</string>
    <string name="createAccountTxt">Create an Account</string>
    <string name="signInUnderline"><u>Sign in</u></string>
    <string name="accountAlready">Already have an account?</string>
    <string name="logout">Logout</string>
    <string name="appTitle">Restaurant Reviewer</string>
    <string name="restaurant">Restaurant </string>
    <string name="reviewer"> Reviewer</string>
    <string name="missingPassword">Please enter a password</string>
    <string name="missingEmail">Please enter an email</string>
    <string name="missingUsername">Please enter a username</string>
    <string name="missingReviewRating">Please give the review a rating</string>
    <string name="missingReview">Please give the review a body</string>
    <string name="missingRestaurant">Please select a restaurant</string>
    <string name="restaurantLabel">Restaurant: </string>
    <string name="usernameLabel">Username: </string>

    <string name="registerSuccess">Account Registered Successfully</string>
    <string name="loggingIn">Logging in</string>

    <string name="permissionDenied">Permission Denied</string>
    <string name="guest">Guest</string>
    <string name="imageSelectionFailed">Image selection failed</string>
    <string name="searching">Searching</string>
    <string name="reviews">My Reviews:</string>
    <string name="reviewUploadSuccess">Your review has been successfully uploaded</string>
    <string name="saveProfilePic">Save Profile Picture</string>
    <string name="SuccessImageUpload">Your profile picture has been successfully updated</string>
    <string name="title_activity_maps2">MapsActivity2</string>

    <string name="saveReview">SAVE REVIEW</string>
    <string name="writeReview">Write review:</string>
    <string name="selectRestaurant">Select Restaurant:</string>
    <string name="edit">EDIT REVIEW</string>
    <string name="notAuthor">You must be signed in as the review author to edit a review</string>

</resources>