<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".UserRegistration">

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/createAccount"
        android:textColor="@color/teal_700"
        android:textSize="35dp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:background="#50ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="20dp"
        android:maxLength="20"/>
    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="#50ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="20dp"
        android:maxLength="100"/>
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:background="#50ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="20dp"
        android:inputType="textPassword"
        android:maxLength="20"/>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/createAccount"
        android:onClick="saveData2"/>
<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">
    <TextView
        android:id="@+id/alreadyHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/accountAlready"
        android:textColor="@color/teal_700"
        android:textSize="20dp"


        />
    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/signInUnderline"
        android:textColor="@color/teal_200"
        android:textSize="20dp"
        android:layout_toRightOf="@+id/alreadyHaveAccount"
        android:textStyle="bold"
        />
</RelativeLayout>
</LinearLayout>
