<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppThemeActionBar"
    tools:context=".SelectReviewActivity">

    <com.example.courseworkpcversion.utils.CustomTextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usernameLabel"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName"></com.example.courseworkpcversion.utils.CustomTextView>

    <com.example.courseworkpcversion.utils.CustomTextView
        android:id="@+id/restaurantNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurantLabel"
        android:textSize="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></com.example.courseworkpcversion.utils.CustomTextView>

    <com.example.courseworkpcversion.utils.CustomTextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/usernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/restaurantName"></com.example.courseworkpcversion.utils.CustomTextView>

    <com.example.courseworkpcversion.utils.CustomTextView
        android:id="@+id/restaurantName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant"
        android:textSize="30dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toEndOf="@+id/restaurantNameLabel"
        app:layout_constraintTop_toTopOf="parent"></com.example.courseworkpcversion.utils.CustomTextView>

    <RatingBar
        android:id="@+id/ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username">

    </RatingBar>
    <com.example.courseworkpcversion.utils.CustomTextView
        android:id="@+id/reviewText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/writeReview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingbar"
        android:maxLength="280"
        android:textSize="30dp">
    </com.example.courseworkpcversion.utils.CustomTextView>

    <ImageView
        android:id="@+id/reviewImage"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:foregroundGravity="center"
        android:src="@drawable/empty_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewText"
        app:layout_constraintVertical_bias="0.223"></ImageView>

    <Button
        android:id="@+id/editByn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:onClick="edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reviewImage"
        app:layout_constraintVertical_bias="0.367" />

</androidx.constraintlayout.widget.ConstraintLayout>