<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_guestbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="500dp"
        android:layout_marginBottom="2000dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/loginGuest" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/signInLabel"
        android:textColor="@color/teal_700"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#50ffffff"
        android:backgroundTint="@color/design_default_color_secondary"
        android:drawableLeft="@drawable/username_icon"
        android:drawablePadding="20dp"
        android:hint="@string/email"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:hint="@string/password"
        android:background="#50ffffff"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="20dp"
        android:inputType="textPassword"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:onClick="login"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_account_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="2000dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/createAccount"
        android:onClick="openCreateAccount"/>

    <ImageView
        android:id="@+id/google"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_below="@+id/signin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/google_login" />

    <ImageView
        android:id="@+id/twitter"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_toRightOf="@+id/google"
        android:layout_below="@+id/signin"
        android:layout_margin="10dp"
        android:src="@drawable/twitter_login" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_toRightOf="@id/twitter"
        android:layout_below="@+id/signin"
        android:layout_margin="10dp"
        android:src="@drawable/facebook_login" />



</RelativeLayout>